# OPL-ICCS311

./: .gitignore
Assignmet/1/: .scalafmt.conf
Assignmet/1/src/main/scala/: Aggregate.scala  Factorial.scala  Happy.scala  Roman.scala  TurnIt.scala  Zombies.scala
Assignmet/2/: build.sbt
Assignmet/2/src/main/scala/: DateUtil.scala  FilterMap.scala  GraphBFS.scala  Maze.scala  OptionFriends.scala  ReadAloud.scala  Thesaurus.scala
Assignmet/3/crawler/: Cargo.toml
Assignmet/3/mining/: Cargo.toml
Assignmet/3/mining/benches/: bench.rs
Assignmet/3/mining/src/: mining.rs
Assignmet/3/prefix-sum/: Cargo.toml
Assignmet/3/prefix-sum/src/: prefixsum.rs
Assignmet/3/spaghetti/: Spaghetti.scala
Final/bst/: Cargo.toml
Final/bst/src/: main.rs
Final/fib/: Cargo.toml
Final/fib/src/: main.rs
Final/merge-sort/src/main/scala/: mergeSort.scala
Final/newton/: Cargo.toml
Final/newton/src/: main.rs
Inclass/1/: Hello.scala  build.sbt
Inclass/1/src/main/scala/: Hello.scala
Inclass/12-rust/: Cargo.toml
Inclass/12-rust/src/: inclass12-starter.rs  inclass12-starter2.rs
Inclass/13-prime/src/main/scala/: Prime.scala
Inclass/2-newton/src/main/scala/: ComputeE.scala  Main.scala  Sqrt.scala
Inclass/3-summing-pair/: .scalafmt.conf
Inclass/3-summing-pair/src/main/scala/: Summing.scala  SummingRec.scala
Inclass/4-fib/src/main/scala/: Fib.scala
Inclass/5-zip/src/main/scala/: Zip.scala  ZipRec.scala
Inclass/6-dessert/src/main/scala/: CountWhile.scala  Dessert.scala  Expr.scala  TopK.scala  Unzip.scala
Midterm/: feedback.txt
Quiz/1-quiz/: build.sbt
(+8 files in other folders)
